console/warranties list: - fixed alignment of badge

--- a/src/app/console/warranty/warranty-list/warranty-list.component.sass
+++ b/src/app/console/warranty/warranty-list/warranty-list.component.sass
@@ -31,7 +31,7 @@ app-warranty-item
 .list-header
   height: $header-height
   padding: 0 24px
-  div
+  div.list-header-text
     height: 40px
     h3
       color: #999
@@ -41,8 +41,8 @@ app-warranty-item
       margin-bottom: 0
   div.list-header-badge
     line-height: 40px
-    nz-badge
-      vertical-align: middle
+    h3
+      text-align: right
 
 nz-divider.list-divider
   margin: 0
